# flake8-less-than

./: LICENSE  README.md  pyproject.toml
flake8_less_than/: checker.py
